# CodeDocGen

./: .env.example  .gitignore  CMakeLists.txt  ENHANCEMENT_PLAN.md  FINAL_RELEASE_PACKAGE.md  PACKAGE_DISTRIBUTION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  RELEASE_v1.2.1.md  codedocgen.pc.in  conanfile.py  config.yaml  create_enhancement_issues.sh  create_github_labels.sh  docgenius-1.2.1.vsix  example.py  requirements.txt  setup.py  test_groq_models.cpp  test_improved_comments.cpp  test_improved_comments.py  test_intelligent_cpp.cpp  test_intelligent_python.py  test_nltk_debug.py  vcpkg.json
.github/workflows/: ci.yml  publish.yml
code_doc_gen/: __init__.py  ai_analyzer.py  analyzer.py  config.py  generator.py  main.py  models.py  scanner.py
code_doc_gen/parsers/: __init__.py  cpp_parser.py  javascript_parser.py  python_parser.py
docgenius-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
docgenius-vscode/src/: extension.ts
docgenius-vscode/src/commands/: configureAI.ts  generateDocs.ts
docgenius-vscode/src/ui/: statusBar.ts
sample_multi/: Sample.java  utils.js  utils.ts
tests/: test_generator.py
usage/: linux.md  macos.md  windows.md
